--- a/WebAPI/Data/SignalR/index.html
+++ b/WebAPI/Data/SignalR/index.html
@@ -60,7 +60,7 @@
                 toastr.info('Login success')
                 return response.json();
             }else{
-                alert("Login failed");
+                toastr.info('Login failed', "hehehe")
             }
         })
         .then(data => {
@@ -107,19 +107,23 @@
                 })
             .build();
 
-        connection.on("sendToUser", (title, content) => {
-            const m = document.createElement("div");
-            m.innerHTML = `
-                <div class="message-author">${title}</div>
-                <div>${content}</div>
-                <div>${new Date().toLocaleString()}</div>
-                <hr>
-            `;
-
-            articleList.appendChild(m);
-            articleList.scrollTop = articleList.scrollHeight;
-        
+        connection.on("ReceiveNotification", (title, content) => {
+            toastr.info(content, title)
         })
+
+        // connection.on("sendToUser", (title, content) => {
+        //     const m = document.createElement("div");
+        //     m.innerHTML = `
+        //         <div class="message-author">${title}</div>
+        //         <div>${content}</div>
+        //         <div>${new Date().toLocaleString()}</div>
+        //         <hr>
+        //     `;
+
+        //     articleList.appendChild(m);
+        //     articleList.scrollTop = articleList.scrollHeight;
+        
+        // })
 
         connection.start().catch((err) => document.write(err));
 
