--- a/WebAPI/Data/SignalR/index.html
+++ b/WebAPI/Data/SignalR/index.html
@@ -101,7 +101,7 @@
         var articleList = document.getElementById("articleList");
         const connection = new signalR.HubConnectionBuilder()
             .configureLogging(signalR.LogLevel.Debug)
-            .withUrl("https://localhost:7006/notification-hub",{
+            .withUrl("https://eventzone.azurewebsites.net/notification-hub",{
                 skipNegotiation: true,
                 transport: signalR.HttpTransportType.WebSockets
                 })
