--- a/WebAPI/Data/index.html
+++ b/WebAPI/Data/index.html
@@ -36,8 +36,8 @@
                     <label class="block text-md font-medium text-gray-700 dark:text-gray-400">Note</label>
                     <p class="mt-1 text-md text-black dark:text-white font-bold">{4: Note}</p>
                 </div>
-                <div class="mt-6 text-white">
-                    <button class="w-full text-md bg-[#38B6FF] py-2 px-4 rounded-md font-medium mt-4">Back to your profile</button>
+                <div class="mt-6 text-white flex items-center justify-center mt-2">
+                    <a href="https://eventzone.id.vn/profile/wallet" class="w-full text-md bg-[#38B6FF] py-2 px-4 rounded-md font-medium mt-4 text-center">Back to your profile</a>
                 </div>
             </div>
         </div>
