--- a/WebAPI/Data/index.html
+++ b/WebAPI/Data/index.html
@@ -37,7 +37,7 @@
                     <p class="mt-1 text-md text-black dark:text-white font-bold">{4: Note}</p>
                 </div>
                 <div class="mt-6 text-white flex items-center justify-center mt-2">
-                    <a href="https://eventzone.id.vn/profile/wallet" class="w-full text-md bg-[#38B6FF] py-2 px-4 rounded-md font-medium mt-4 text-center">Back to your profile</a>
+                    <a href="https://eventzone.id.vn/account/wallet" class="w-full text-md bg-[#38B6FF] py-2 px-4 rounded-md font-medium mt-4 text-center">Back to your profile</a>
                 </div>
             </div>
         </div>
